Missed space.activity.group

--- a/src/main/resources/activity/activity.conf
+++ b/src/main/resources/activity/activity.conf
@@ -1,7 +1,7 @@
 space.activity.group=generic
 
 space.activity.type=interactivespaces_native
-space.activity.executable=com.endpoint.lg.evdev.demuxer-1.0.0.dev.jar
+space.activity.executable=com.endpoint.lg.evdev.demuxer-1.1.0.jar
 
 space.activity.name=Event Device Demuxer
 
